# steffect

./: .gitignore  local.properties  settings.gradle
BeautyProductsSDK/: build.gradle  proguard-rules.pro
BeautyProductsSDK/src/main/: AndroidManifest.xml
STMobileJNI/: build.gradle
STMobileJNI/src/main/jni/: Android.mk  stmobile_authentification_jni.cpp  stmobile_beautify_jni.cpp  stmobile_common_jni.cpp  stmobile_face_attribute_jni.cpp  stmobile_filter_jni.cpp  stmobile_humanaction_jni.cpp  stmobile_sticker_jni.cpp  utils.cpp  utils.h
STMobileJNI1/: build.gradle
STMobileJNI1/src/main/: AndroidManifest.xml
STMobileJNI1/src/main/jni/: Android.mk  stmobile_beautify_jni.cpp  stmobile_humanaction_jni.cpp  stmobile_object_jni.cpp  stmobile_streamfilter_jni.cpp  utils.h
STMobileJNI500/: build.gradle
STMobiledemo/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app500/: build.gradle
app500/src/main/: AndroidManifest.xml
app500test/: build.gradle
app500test/src/main/: AndroidManifest.xml
apptest/: build.gradle  proguard-rules.pro
apptest/src/main/: AndroidManifest.xml
apptest/src/main/cpp/: CMakeLists.txt  esShader.c  gl_render.cpp  gl_render.h
beautysdk/: .gitignore  build.gradle
beautysdk/src/main/: AndroidManifest.xml
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/cpp/: CMakeLists.txt  stmobile_authentification_jni.cpp
demo/src/main/cpp/prebuilt/include/: st_mobile_filter.h  st_mobile_license.h
facelianpu/: CMakeLists.txt  proguard-rules.pro
gradle/wrapper/: gradle-wrapper.properties
(+274 files in other folders)
